# lost_green

./: AGENTS.md  README.md  mise.toml
scripts/: release.sh
src-elixir/: .gitignore  mix.exs
src-elixir/assets/css/: app.css
src-elixir/assets/js/: app.js  device_bridge.js
src-elixir/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
src-elixir/lib/: lost_green.ex  lost_green_web.ex
src-elixir/lib/lost_green/: accounts.ex  application.ex  data_helper.ex  mailer.ex  metrics.ex  repo.ex
src-elixir/lib/lost_green/accounts/: user.ex
src-elixir/lib/lost_green/metrics/: cadence_server.ex  device_server.ex  heart_rate_server.ex  power_meter_server.ex  secondary_power_meter_server.ex  smart_trainer_server.ex
src-elixir/lib/lost_green_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex  user_management.ex
src-elixir/lib/lost_green_web/components/: core_components.ex  dashboard_components.ex  layouts.ex
src-elixir/lib/lost_green_web/controllers/: error_html.ex  error_json.ex  internal_controller.ex  page_controller.ex  page_html.ex
src-elixir/priv/repo/: seeds.exs
src-elixir/test/: test_helper.exs
src-elixir/test/lost_green/: metrics_test.exs
src-elixir/test/support/: conn_case.ex  data_case.ex
src-tauri/: .gitignore  Cargo.toml  Info.plist  erl_crash.dump  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/devices/: bluetooth.rs  cadence.rs  heart_rate.rs  mod.rs  power_meter.rs  secondary_power_meter.rs  smart_trainer.rs
(+9 files in other folders)
