[package]
name = "lost_green"
version = "0.1.0"
description = "Train smarter with your bike, your sensors, and your data in one place"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lost_green"
path = "src/main.rs"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lost_green_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["blocking"] }
tokio = { version = "1.50", features = ["time"] }
log = "0.4"
flexi_logger = "0.29"
btleplug = { version = "0.11", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"

